<resources>
    <string name="app_name">SSK1</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="parents_name">Parents name</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="sign">Sign IN</string>
    <string name="r1">Reg ID</string>
    <string name="r2">Doctor ID</string>
    <string name="t3">Date</string>
    <string name="as">slot</string>
</resources>
